Put max_filL_speed back udner extruders

--- a/birdwing_codegen/static/machine_config_skeleton.json
+++ b/birdwing_codegen/static/machine_config_skeleton.json
@@ -16,8 +16,7 @@
         "max_outer_shell_speed": null,
         "max_inner_shell_speed": null,
         "rapid_move_feed_rate_xy": null,
-        "rapid_move_feed_rate_z" : null,
-        "max_fill_speed": null
+        "rapid_move_feed_rate_z" : null
     },
     "acceleration": {
         "split_move_distance_mm": null,
@@ -58,6 +57,7 @@
                     "retract_rate": null,
                     "restart_rate": null,
                     "max_flow_rate": null,
+                    "max_fill_speed": null,
                     "acceleration": {
                         "rate_mm_per_s_sq": null,
                         "min_speed_change_mm_per_s": null,
