Use machine_type not bot_type
To follow what it's called in the printer settings

BW-1901
BW-2412
http://jira.makerbot.net/browse/BW-1901
http://jira.makerbot.net/browse/BW-2412

--- a/birdwing_codegen/static/machine_config_skeleton.json
+++ b/birdwing_codegen/static/machine_config_skeleton.json
@@ -1,6 +1,6 @@
 {
     "version": 1.0,
-    "bot_type" : null,
+    "machine_type" : "--generated--",
     "makerbot_generation" : 5,
     "build_volume": {
         "x": null,
