Revert "Use machine_type not bot_type"
This reverts commit 7dd660574471a615621ba848f41c248b2327348d.

--- a/birdwing_codegen/static/machine_config_skeleton.json
+++ b/birdwing_codegen/static/machine_config_skeleton.json
@@ -1,6 +1,6 @@
 {
     "version": 1.0,
-    "machine_type" : "--generated--",
+    "bot_type": null,
     "makerbot_generation" : 5,
     "build_volume": {
         "x": null,
