Send chamber temperature in machine config
BW-2493

--- a/birdwing_codegen/static/machine_config_skeleton.json
+++ b/birdwing_codegen/static/machine_config_skeleton.json
@@ -70,5 +70,6 @@
         },
         "supported_extruders" : "--generated--",
         "attached_extruders" : "--generated--"
-    }
+    },
+    "chamber_temperature_default" : "--generated--"
 }
