we keep the BW files in a different place
BST-317
http://jira.makerbot.net/browse/BST-317

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ generate_and_install_config(
     NAME MBCoreUtils
     ADDITIONAL_PATHS
         MBCoreUtils_INCLUDE_DIRS ${HEADER_INSTALL_DIR}
-        BWCoreUtils_INCLUDE_DIRS ${HEADER_INSTALL_DIR})
+        BWCoreUtils_INCLUDE_DIRS ${HEADER_INSTALL_DIR}/bwcoreutils)
 
 install(
     FILES ${codegenned_files}
