Add translations for errors
This is a new template that builds QT translatable strings out of
errors.json, translation files for them, and build system integration
for updating the translations.

Also, the translation files.
BW-2936
BW-2908
http://jira.makerbot.net/browse/BW-2908

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ include/bwcoreutils/bot_error.hh
 include/bwcoreutils/tool_mappings.hh
 .build-host/
 .build-cross/
+.build-dev/
+error_translations.zip
 
 # makerbot cmake folders
 _build
