Get bot_error_noqt.hh up-to-date, and add all_errors_node.hh
* Add message formatting/setting to bot_error_noqt.hh, make it more aligned with
bot_error.hh
* Add message_noqt, msg_no_errcode keys to error.json to help with formatting
shenanigans for bot_error_noqt
* Add all_errors_node.hh for croissant_node

PEN-134
http://jira.makerbot.net/browse/PEN-134

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(contexts_dir
 mustache_codegen(
     TEMPLATES
         "${templates_dir}/shared_cpp/all_errors.hh"
+        "${templates_dir}/shared_cpp/all_errors_node.hh"
         "${templates_dir}/shared_cpp/bot_error.hh"
         "${templates_dir}/shared_cpp/bot_error_noqt.hh"
         "${templates_dir}/shared_cpp/ikrpccontroller.hh"
