Add support for the morepork toolchain to the cmake lists BW-3455 http://jira.makerbot.net/browse/BW-3455

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,51 @@ project(MBCoreUtils NONE)
 find_package(MBCMakeTools REQUIRED)
 find_package(Mustache REQUIRED)
 
-# Probably should set individual variables for the individual
-# birdwing things, but until then...
-set(BIRDWING OFF CACHE BOOL "Toggle building birdwing")
-if(${BIRDWING})
-    message(FATAL_ERROR "Not set up to build birdwing, yet.")
-endif()
+get_header_prefix_root(header_install_root)
 
 set(templates_dir
     "${PROJECT_SOURCE_DIR}/birdwing_codegen/templates")
 set(contexts_dir
     "${PROJECT_SOURCE_DIR}/birdwing_codegen/contexts")
+
+set(_CONTEXTS
+    "${contexts_dir}/errors.json"
+    "${contexts_dir}/tool_metadata.json"
+    "${contexts_dir}/machine_specific_enums.json")
+
+
+if(${BIRDWING})
+    if(${MB_CROSS})
+        install(FILES
+            "${PROJECT_SOURCE_DIR}/birdwing_codegen/static/machine_config_skeleton.json"
+            DESTINATION "rootfs/usr/settings")
+        set(python_install_dir "rootfs/${LIB_INSTALL_DIR}/python3.4/site-packages/kaiten")
+    else()
+        set(python_install_dir "host/${LIB_INSTALL_DIR}/python3.4/site-packages/kaiten")
+    endif()
+    set(BW_TEMPLATES
+        "${templates_dir}/shared_cpp/bot_error_translateable.hh"
+        "${templates_dir}/shared_cpp/common_settings.hh")
+    mustache_codegen(
+        TEMPLATES
+            "${templates_dir}/python/common_settings.py"
+            "${templates_dir}/python/machine_definitions.py"
+            "${templates_dir}/python/machine_errors.py"
+            "${templates_dir}/python/toolhead_errors.py"
+            "${templates_dir}/python/tool_mappings.py"
+        CONTEXTS
+            "${_CONTEXTS}"
+        TRANSFORMATIONS_FILE
+            "${PROJECT_SOURCE_DIR}/birdwing_codegen/transformations.json"
+        OUTPUT_DIR
+            "${PROJECT_BINARY_DIR}/python_codegen"
+        OUTPUT_VARIABLE
+            codegenned_files_python)
+    add_custom_target(python_codgen ALL DEPENDS ${codegenned_files_python})
+    install(
+        FILES ${codegenned_files_python}
+        DESTINATION ${python_install_dir})
+endif()
 
 mustache_codegen(
     TEMPLATES
@@ -29,10 +63,9 @@ mustache_codegen(
         "${templates_dir}/machine_cpp/machine_errors.hh"
         "${templates_dir}/machine_cpp/toolhead_errors.hh"
         "${templates_dir}/machine_cpp/toolhead_toolidentifier.hh"
+        "${BW_TEMPLATES}"
     CONTEXTS
-        "${contexts_dir}/errors.json"
-        "${contexts_dir}/tool_metadata.json"
-        "${contexts_dir}/machine_specific_enums.json"
+        "${_CONTEXTS}"
     TRANSFORMATIONS_FILE
         "${PROJECT_SOURCE_DIR}/birdwing_codegen/transformations.json"
     OUTPUT_DIR
@@ -46,17 +79,19 @@ add_custom_target(codegen ALL DEPENDS ${codegenned_files})
 generate_and_install_config(
     NAME MBCoreUtils
     ADDITIONAL_PATHS
-        MBCoreUtils_INCLUDE_DIRS ${HEADER_INSTALL_DIR}
-        BWCoreUtils_INCLUDE_DIRS ${HEADER_INSTALL_DIR}/bwcoreutils)
+        MBCoreUtils_INCLUDE_DIRS ${header_install_root}${HEADER_INSTALL_DIR}
+        BWCoreUtils_INCLUDE_DIRS ${header_install_root}${HEADER_INSTALL_DIR}/bwcoreutils)
 
 install(
     FILES ${codegenned_files}
-    DESTINATION "${HEADER_INSTALL_DIR}/bwcoreutils")
+    DESTINATION "${header_install_root}${HEADER_INSTALL_DIR}/bwcoreutils")
 
-install(
-    DIRECTORY "${PROJECT_SOURCE_DIR}/include/mbcoreutils"
-    DESTINATION "${HEADER_INSTALL_DIR}")
+if(NOT DEFINED BIRDWING)
+    install(
+        DIRECTORY "${PROJECT_SOURCE_DIR}/include/mbcoreutils"
+        DESTINATION "${header_install_root}${HEADER_INSTALL_DIR}")
 
-install_docs(
-    FILES "${PROJECT_SOURCE_DIR}/README.md"
-    PREFIX MBCoreUtils)
+    install_docs(
+        FILES "${PROJECT_SOURCE_DIR}/README.md"
+        PREFIX MBCoreUtils)
+endif()
