For dual printing: templated axis names in skeleton

--- a/birdwing_codegen/static/machine_config_skeleton.json
+++ b/birdwing_codegen/static/machine_config_skeleton.json
@@ -62,7 +62,7 @@
             "nozzle_diameter": null,
             "max_speed_mm_per_second": null,
             "steps_per_mm": {
-                "a": null
+                "-": null
             },
             "materials": {
                 "*": {
