Slip compensation has an axis key
And we didn't notice.

--- a/birdwing_codegen/static/machine_config_skeleton.json
+++ b/birdwing_codegen/static/machine_config_skeleton.json
@@ -78,7 +78,7 @@
                         "min_speed_change_mm_per_s": null,
                         "max_speed_change_mm_per_s": null,
                         "impulse_speed_limit_mm_per_s": null,
-                        "slip_compensation_table": null
+                        "slip_compensation_table": {"a": null}
                     }
                 }
             }
