--- a/birdwing_codegen/static/machine_config_skeleton.json
+++ b/birdwing_codegen/static/machine_config_skeleton.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.1.0",
+    "version": "2.0.0",
     "bot_type": null,
     "makerbot_generation" : 5,
     "max_speed_mm_per_second": {
@@ -78,7 +78,9 @@
                         "min_speed_change_mm_per_s": null,
                         "max_speed_change_mm_per_s": null,
                         "impulse_speed_limit_mm_per_s": null,
-                        "slip_compensation_table": null
+                        "slip_compensation_table": {
+                            "-": null
+                        }
                     }
                 }
             }
