--- a/birdwing_codegen/static/machine_config_skeleton.json
+++ b/birdwing_codegen/static/machine_config_skeleton.json
@@ -61,9 +61,7 @@
         "*" : {
             "nozzle_diameter": null,
             "max_speed_mm_per_second": null,
-            "steps_per_mm": {
-                "a": null
-            },
+            "steps_per_mm": null,
             "materials": {
                 "*": {
                     "feed_diameter": null,
