Extruder temp limits to be based on type of extruder - Created an extruder_common file with a helper function   that returns the max temperature limit for each extruder. - This file can an included header file for both   extruder firmware and toolhead firmware. This way we don't   have to define a duplicate limit value for each module.
BW-5277
http://makerbot.atlassian.net/browse/BW-5277

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ mustache_codegen(
         "${templates_dir}/machine_cpp/machine_errors.hh"
         "${templates_dir}/machine_cpp/toolhead_errors.hh"
         "${templates_dir}/machine_cpp/toolhead_toolidentifier.hh"
+        "${templates_dir}/machine_cpp/extruder_common.hh"
     CONTEXTS
         "${_CONTEXTS}"
     TRANSFORMATIONS_FILE
